--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/question.css">
+  <link rel="stylesheet" href="assets/css/question.css">
   <script type="text/javascript">var submitted = false;</script>
   <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) 
 {window.location='thanks.html'}"></iframe>
@@ -68,11 +68,10 @@
         <input type="submit" value="送信する" name="submitBtn">
       </div>
     </form>
-    <a href="nirayama.html">トップページに戻る</a>
   </main>
 
   <footer>
-    <div class="footerInner"><small>&copy; 仮想高等学校</small></div>
+    <div class="footerInner"><small>&copy; NIR=A</small></div>
   </footer>
 </body>
 
