--- a/home.html
+++ b/home.html
@@ -23,9 +23,10 @@
       </h1>
       <nav class = "pc-menu">
         <ul class = "pc-only">
-          <li><a href="#">大学受験</a></li>
-          <li><a href="#">プログラミング</a></li>
-          <li><a href="#">デザイン</a></li>
+          <img id = "logo" src="assets/images/rogo.png" alt="ゲームロゴ">
+          <li><a href="news.html">ニュース</a></li>
+          <li><a href="character.html">キャラクター</a></li>
+          <li><a href="staff.html">スタッフ</a></li>
         </ul>
       </nav>
       <a href="contact.html" class="button pc-only">お問い合わせ</a>
@@ -49,9 +50,11 @@
         <h1 id = "main-message">あなたに<span>未来</span>は託された</h1>
     </div> -->
         <div class="slider">
+          <div class="blur">
+            <img id="infoTitle" src="assets/images/info-1.png" alt="インフォメーション">
             <div class="sliderBtn">
-                <a id="prevBtn"><img src="assets/images/nextImage.png"></a>
-                <a id="nextBtn"><img src="assets/images/nextImage.png"></a>
+                <a id="prevBtn"><img src="assets/images/next1.png"></a>
+                <a id="nextBtn"><img src="assets/images/next1.png"></a>
             </div>
             <div class="carousel-wrapper">
                 <ul class="carousel-area">
@@ -62,24 +65,24 @@
                     <li><img src="assets/images/screenshot.jpg"></li>
                 </ul>
             </div>
+          </div>
         </div>
         <!-- ツイッター -->
-        <a class="twitter-timeline" data-width="60%" data-height="600px" data-chrome="transparent"
-            data-chrome="noborders"  data-theme="dark"
-            href="https://twitter.com/NiraPhy_150?ref_src=twsrc%5Etfw">Tweets by NiraPhy_150</a>
-        <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        <!-- ステージー紹介タブ -->
-        <div class="introTab">
-            <p id="tabcontrol">
-                <a href="#tab1" id="tab1">タブ1</a>
-                <a href="#tab2" id="tab2">タブ2</a>
-                <a href="#tab3" id="tab3">タブ3</a>
-            </p>
-            <div id="tabbody">
-                <div id="tabpage1">…… タブ1の中身 ……</div>
-                <div id="tabpage2">…… タブ2の中身 ……</div>
-                <div id="tabpage3">…… タブ3の中身 ……</div>
-            </div>
+        <div id="twitter">
+          <div class="blur">
+            <img id = "twitterTitle" src="assets/images/twitter-1.png" alt="ツイッター">
+            <a class="twitter-timeline" data-width="50%" data-height="400px" data-chrome="transparent"
+                data-chrome="noborders" frameborder="0"
+                href="https://twitter.com/NiraPhy_150?ref_src=twsrc%5Etfw">Tweets by NiraPhy_150</a>
+            <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          </div>
+        </div>
+        <!-- ストーリー -->
+        <div id="story">
+          <div class="blur">
+            <img id = "storyTitle" src="assets/images/story-1.png" alt="あらすじ">
+            <h2></h2>
+          </div>
         </div>
     </main>
     <footer>
