--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/slider.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
     <script src="assets/js/jquery-3.5.1.min.js"></script>
     <script src="assets/js/shutter.js"></script>
     <script src="assets/js/shutter2.js"></script>
