--- a/home.html
+++ b/home.html
@@ -94,6 +94,12 @@
     <img id="meteor1" src="assets/images/meteor-2.png" alt="">
     <img id="meteor2" src="assets/images/meteor-2.png" alt="">
     <img id="meteor3" src="assets/images/meteor-2.png" alt="">
+    <img id="sparkbefore" src="assets/images/lightbefore.png" alt="">
+    <img id="sparkafter" src="assets/images/lightafter.png" alt="">
+    <img id="sparkbefore2" src="assets/images/lightbefore.png" alt="">
+    <img id="sparkafter2" src="assets/images/lightafter.png" alt="">
+    <img id="sparkbefore3" src="assets/images/lightbefore.png" alt="">
+    <img id="sparkafter3" src="assets/images/lightafter.png" alt="">
     <footer>
         <div class="footerInner">
           <ul id=map>
