最後のスライドまでいったら最初のスライドまで戻ってくる処理を追加(pcのみ) あらすじの追加(背景早くくれ)

--- a/character.html
+++ b/character.html
@@ -14,6 +14,7 @@
 
 <body>
     <div id="hero">
+        <div class="blur">
             <h2 id="heroName">主人公</h2>
             <div class="chara">
                 <img src="assets/images/hero.png" alt="主人公" id="charaImage">
@@ -21,24 +22,29 @@
                     この世界の秘密を解き明かしてゆく...</p>
                 <video src="assets/videos/temp.mp4" class="charaModel"></video>
             </div>
+        </div>
     </div>
 
     <div id="heroine">
+        <div class="blur">
             <h2 id="heroineName">ヒロイン</h2>
             <div class="chara">
-                <img src="assets/images/heroin.png" alt="ヒロイン" id="charaImage">
+                <img src="assets/images/heroine.png" alt="ヒロイン" id="charaImage">
                 <p class="introduction">本作のヒロイン</p>
                 <video src="assets/videos/temp.mp4" class="charaModel"></video>
             </div>
+        </div>
     </div>
     <div id="boss">
-        <h2 id="heroineName">ヒロイン</h2>
-        <div class="chara">
-            <img src="assets/images/heroin.png" alt="ヒロイン" id="charaImage">
-            <p class="introduction">本作のヒロイン</p>
-            <video src="assets/videos/temp.mp4" class="charaModel"></video>
+        <div class="blur">
+            <h2 id="heroineName">ヒロイン</h2>
+            <div class="chara">
+                <img src="assets/images/boss4.png" alt="ヒロイン" id="charaImage">
+                <p class="introduction">本作のヒロイン</p>
+                <video src="assets/videos/temp.mp4" class="charaModel"></video>
+            </div>
         </div>
-</div>
+    </div>
 </body>
 
 </html>
