--- a/home.html
+++ b/home.html
@@ -5,18 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/jquery-ui.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/slider.css">
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/appear.css">
     <link rel="stylesheet" href="assets/css/deco.css">
     <script src="assets/js/jquery-3.5.1.min.js"></script>
+    <script src="assets/js/jquery-ui.min.js"></script>
     <script src="assets/js/shutter.js"></script>
     <script src="assets/js/shutter2.js"></script>
     <script src="assets/js/swiper.js"></script>
     <script src="assets/js/header.js"></script>
     <script src="assets/js/tab-controll.js"></script>
     <script src="assets/js/appear.js"></script>
+    <script src="assets/js/context.js" defer></script>
 
     <title>ホームページ</title>
 </head>
@@ -85,7 +88,18 @@
         <div id="story">
           <div class="blur">
             <img id = "storyTitle" src="assets/images/story-1.png" alt="あらすじ">
-            <h2></h2>
+            <div id="context">
+              <h2>緑が大地を覆いつくし、多様な生命が息づくこの世界の、静寂につつまれた森の奥で、<br>新たな<span class="decoText">特異点</span>が目を覚まそうとしていた</h2>
+              <p id="paragraph1"><span class="decoText">「主人公」</span>は暗闇の中、長い眠りから目覚める。<br>
+                ここはどこなのか、自分はいったい誰なのか...<br>
+                <span class="decoText">「あなた」</span>は多大なる不安と疑問を抱きながらもその世界に身を投じる。</p>
+              <p id="paragraph2">化け物も住まうこの世界で、あなたは戦いながら成長し、自分と同じ境遇をもつ仲間たちと共に立ちはだかる数々の巨大な壁を乗り越えていく。<br>
+                 果たしてその先にあるものとは？
+              </p>
+              <p id="paragraph3">
+                これは、数々の冒険の中でこの世界の<span class="decoText">「秘密」</span>と<span class="decoText">「過去」</span>を解き明かしていく、壮大なオープンワールドファンタジーゲーム
+              </p>
+            </div>
           </div>
         </div>
     </main>
