キャラクター紹介ページの編集、webGLテスト

--- a/character.html
+++ b/character.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/character.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-visible/1.2.0/jquery.visible.min.js"></script>
     <script src="assets/js/character.js" defer></script>
@@ -14,37 +15,88 @@
 
 <body>
     <div id="hero">
-        <div class="blur">
-            <h2 id="heroName">主人公</h2>
-            <div class="chara">
-                <img src="assets/images/hero.png" alt="主人公" id="charaImage">
-                <p class="introduction">本作の主人公。<br>韮山を舞台にした自然あふれる世界を闊歩し、
-                    この世界の秘密を解き明かしてゆく...</p>
-                <video src="assets/videos/temp.mp4" class="charaModel"></video>
-            </div>
-        </div>
+        
     </div>
 
     <div id="heroine">
-        <div class="blur">
+        <!-- <div class="blur">
             <h2 id="heroineName">ヒロイン</h2>
             <div class="chara">
                 <img src="assets/images/heroine.png" alt="ヒロイン" id="charaImage">
                 <p class="introduction">本作のヒロイン</p>
                 <video src="assets/videos/temp.mp4" class="charaModel"></video>
             </div>
-        </div>
+        </div> -->
     </div>
     <div id="boss">
-        <div class="blur">
+        <!-- <div class="blur">
             <h2 id="heroineName">ヒロイン</h2>
             <div class="chara">
                 <img src="assets/images/boss4.png" alt="ヒロイン" id="charaImage">
                 <p class="introduction">本作のヒロイン</p>
                 <video src="assets/videos/temp.mp4" class="charaModel"></video>
             </div>
-        </div>
+        </div> -->
     </div>
+    <footer>
+        <div class="footerInner">
+          <ul id=map>
+            <li>
+            <li>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3266.0483605250683!2d138.9528366!3d35.05553!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601993fa182016a3%3A0x2539289b512ef0d4!2z6Z2Z5bKh55yM56uL6Z-u5bGx6auY562J5a2m5qCh!5e0!3m2!1sja!2sjp!4v1639092519734!5m2!1sja!2sjp"
+                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </li>
+            </li>
+          </ul>
+        </div>
+        <ul class="links-main-pages">
+          <li>
+            <a href="https://ja-jp.facebook.com/nirako/" target="_blank"><img src="images/facebook.png"
+                alt="韮山高校公式facebook" id="aicon"></a>
+          </li>
+          <li>
+            <a href="http://nirako-dosokai.org/kinen150/" target="_blank"><img src="images/150th.jfif" alt="150周年企画"></a>
+          </li>
+          <li>
+            <a href="http://nirako-dosokai.org/"><img src="images/union.jpg" alt="同窓会"></a>
+          </li>
+          <li>
+            <a href="http://www.edu.pref.shizuoka.jp/nirayama-h/home.nsf/0A6D3D45392B674B492587E500218B46/$FILE/R4.2-3%E3%82%B9%E3%82%AF%E3%83%BC%E3%83%AB%E3%83%90%E3%82%B9.pdf"><img src="images/school-bus.jpg" alt="スクールバス"></a>
+          </li>
+          <li>
+            <a href="http://www.edu.pref.shizuoka.jp/nirayama-h/home.nsf/indexFormView/82F8E7A723A99D71492586F000252322?OpenDocument"><img src="images/virus.jpg" alt="インフルエンザの対応"></a>
+          </li>
+          <li>
+            <a href="http://www.edu.pref.shizuoka.jp/nirayama-h/home.nsf/C7A76AFCAB0980244925827300218E5D/$FILE/%E9%9F%AE%E5%B1%B1%E8%87%AA%E7%84%B6%E7%81%BD%E5%AE%B3%E7%99%BA%E7%94%9F%E6%99%82%E5%AF%BE%E5%BF%9C.pdf"><img src="images/wether.jpg" alt="荒天時の対応"></a>
+          </li>
+        </ul>
+        <!-- <ul class="links-sub-pages">
+          <li>
+            <a href="menu-html/direction.html">学校案内</a>
+          </li>
+          <li>
+            <a href="menu-html/school-life.html">学校生活</a>
+          </li>
+          <li>
+            <a href="menu-html/school-event.html">学校行事</a>
+          </li>
+          <li>
+            <a href="menu-html/student-route.html">進路状況</a>
+          </li>
+          <li>
+            <a href="menu-html/school-club.html">部活動</a>
+          </li>
+          <li>
+            <a href="menu-html/candidates.html">本校を目指す方へ</a>
+          </li>
+          <li>
+            <a href="menu-html/office-message.html">事務室より</a>
+          </li>
+        </ul> -->
+        <small>&copy;仮想高校</small>
+        </div>
+      </footer>
 </body>
 
 </html>
