--- a/home.html
+++ b/home.html
@@ -113,6 +113,7 @@
 
     <script src="https://cdn.rawgit.com/mrdoob/three.js/r128/build/three.min.js"></script>
     <script src="https://cdn.rawgit.com/mrdoob/three.js/r128/examples/js/loaders/FBXLoader.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/fflate@0.7.0"></script>
 
     <script>
         var canvas = document.getElementById('myCanvas');
