--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/NIR=A.loader.js";
       var config = {
-        dataUrl: buildUrl + "/NIR=A.data.gz",
-        frameworkUrl: buildUrl + "/NIR=A.framework.js.gz",
-        codeUrl: buildUrl + "/NIR=A.wasm.gz",
+        dataUrl: buildUrl + "/NIR=A.data",
+        frameworkUrl: buildUrl + "/NIR=A.framework.js",
+        codeUrl: buildUrl + "/NIR=A.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "My project (1)",
