キャラクター紹介ページもう少しで完成

--- a/character.html
+++ b/character.html
@@ -17,19 +17,95 @@
 
 <body>
     <div id="hero">
-        <iframe id="heroModel" src="https://meganenomegane1224.github.io/webGL_charactor/" frameborder="0" scrolling="no"></iframe>
+        
+    </div>
+    <div id="heroIntro">
+      <div class="blur">
+        <iframe id="model" src="https://meganenomegane1224.github.io/webGL_charactor/" frameborder="0" scrolling="no"></iframe>
+        <div class="wipePos">
+          <img class="wipe" src="assets/images/herowipe.png" alt="">
+        </div>
+          <li class="firstItem">身長: 175</li>
+          <li>年齢: 17</li>
+          <li>モデル制作者: 中島弘喜</li>
+          <li>キャラデザ: 益井</li>
+          <li>異能: 成長</li>
+        <div class="loop">
+          <div class="loop1">HERO</div>
+          <div class="loop1">HERO</div>
+          <div class="loop1">HERO</div>
+          <div class="loop1">HERO</div>
+          <div class="loop1">HERO</div>
+          <div class="loop1">HERO</div>
+          <div class="loop1">HERO</div>
+          <div class="loop1">HERO</div>
+          <div class="loop1">HERO</div>
+          <div class="loop1">HERO</div>
+          <div class="loop2">HERO</div>
+          <div class="loop2">HERO</div>
+          <div class="loop2">HERO</div>
+          <div class="loop2">HERO</div>
+          <div class="loop2">HERO</div>
+          <div class="loop2">HERO</div>
+          <div class="loop2">HERO</div>
+          <div class="loop2">HERO</div>
+          <div class="loop2">HERO</div>
+          <div class="loop2">HERO</div>
+          <div class="loop2">HERO</div>
+          <div class="loop2">HERO</div>
+          <div class="loop2">HERO</div>
+        </div>
+        <div id="bg1">
+          <img id = heroName src="assets/images/heroName.png" alt="主人公">
+        </div>
+      </div>
     </div>
 
     <div id="heroine">
-        <!-- <div class="blur">
-            <h2 id="heroineName">ヒロイン</h2>
-            <div class="chara">
-                <img src="assets/images/heroine.png" alt="ヒロイン" id="charaImage">
-                <p class="introduction">本作のヒロイン</p>
-                <video src="assets/videos/temp.mp4" class="charaModel"></video>
-            </div>
-        </div> -->
+
     </div>
+    <div id="heroineIntro">
+      <div class="blur">
+          <img class="model" src="assets/images/heroine.png" alt="">
+        <div class="wipePos">
+          <img class="wipe" src="assets/images/heroinewipe.png" alt="">
+        </div>
+          <li class="firstItem">身長: 175</li>
+          <li>年齢: 17</li>
+          <li>モデル制作者: 中島弘喜</li>
+          <li>キャラデザ: novelAI</li>
+          <li>異能: </li>
+        <div class="loop">
+          <div class="loop1">HEROINE</div>
+          <div class="loop1">HEROINE</div>
+          <div class="loop1">HEROINE</div>
+          <div class="loop1">HEROINE</div>
+          <div class="loop1">HEROINE</div>
+          <div class="loop1">HEROINE</div>
+          <div class="loop1">HEROINE</div>
+          <div class="loop1">HEROINE</div>
+          <div class="loop1">HEROINE</div>
+          <div class="loop1">HEROINE</div>
+          <div class="loop2">HEROINE</div>
+          <div class="loop2">HEROINE</div>
+          <div class="loop2">HEROINE</div>
+          <div class="loop2">HEROINE</div>
+          <div class="loop2">HEROINE</div>
+          <div class="loop2">HEROINE</div>
+          <div class="loop2">HEROINE</div>
+          <div class="loop2">HEROINE</div>
+          <div class="loop2">HEROINE</div>
+          <div class="loop2">HEROINE</div>
+          <div class="loop2">HEROINE</div>
+          <div class="loop2">HEROINE</div>
+          <div class="loop2">HEROINE</div>
+        </div>
+        <div id="bg2">
+          <img id = heroineName src="assets/images/heroineName.png" alt="ヒロイン">
+        </div>
+      </div>
+    </div>
+
     <div id="boss">
         <!-- <div class="blur">
             <h2 id="heroineName">ヒロイン</h2>
@@ -39,6 +115,11 @@
                 <video src="assets/videos/temp.mp4" class="charaModel"></video>
             </div>
         </div> -->
+    </div>
+    <div id="bossIntro">
+      <div class="blur">
+
+      </div>
     </div>
 
     <footer>
