キャラクター紹介ページ完成(bossのみ背景待ち)

--- a/character.html
+++ b/character.html
@@ -21,7 +21,7 @@
     </div>
     <div id="heroIntro">
       <div class="blur">
-        <iframe id="model" src="https://meganenomegane1224.github.io/webGL_charactor/" frameborder="0" scrolling="no"></iframe>
+        <iframe class="model" src="https://meganenomegane1224.github.io/webGL_charactor/" frameborder="0" scrolling="no"></iframe>
         <div class="wipePos">
           <img class="wipe" src="assets/images/herowipe.png" alt="">
         </div>
@@ -107,18 +107,47 @@
     </div>
 
     <div id="boss">
-        <!-- <div class="blur">
-            <h2 id="heroineName">ヒロイン</h2>
-            <div class="chara">
-                <img src="assets/images/boss4.png" alt="ヒロイン" id="charaImage">
-                <p class="introduction">本作のヒロイン</p>
-                <video src="assets/videos/temp.mp4" class="charaModel"></video>
-            </div>
-        </div> -->
+
     </div>
     <div id="bossIntro">
       <div class="blur">
-
+        <iframe class="model" src="https://meganenomegane1224.github.io/webGL_BOSScharactor/" frameborder="0" scrolling="no"></iframe>
+        <div class="wipePos">
+          <img class="wipe" src="assets/images/bosswipe.png" alt="">
+        </div>
+          <li class="firstItem">身長: </li>
+          <li>年齢: ???</li>
+          <li>モデル制作者: megane</li>
+          <li>キャラデザ: 韮山高校美術部</li>
+          <li>異能: ???</li>
+        <div class="loop">
+          <div class="loop1">BOSS</div>
+          <div class="loop1">BOSS</div>
+          <div class="loop1">BOSS</div>
+          <div class="loop1">BOSS</div>
+          <div class="loop1">BOSS</div>
+          <div class="loop1">BOSS</div>
+          <div class="loop1">BOSS</div>
+          <div class="loop1">BOSS</div>
+          <div class="loop1">BOSS</div>
+          <div class="loop1">BOSS</div>
+          <div class="loop2">BOSS</div>
+          <div class="loop2">BOSS</div>
+          <div class="loop2">BOSS</div>
+          <div class="loop2">BOSS</div>
+          <div class="loop2">BOSS</div>
+          <div class="loop2">BOSS</div>
+          <div class="loop2">BOSS</div>
+          <div class="loop2">BOSS</div>
+          <div class="loop2">BOSS</div>
+          <div class="loop2">BOSS</div>
+          <div class="loop2">BOSS</div>
+          <div class="loop2">BOSS</div>
+          <div class="loop2">BOSS</div>
+        </div>
+        <div id="bg3">
+          <img id = bossName src="assets/images/bossName.png" alt="主人公">
+        </div>
       </div>
     </div>
 
