ロードを少し改善(?)@loading = "lazy"

--- a/character.html
+++ b/character.html
@@ -22,7 +22,7 @@
     </div>
     <div id="heroIntro">
       <div class="blur">
-        <iframe class="model" src="https://meganenomegane1224.github.io/webGL_charactor/" frameborder="0" scrolling="no"></iframe>
+        <iframe class="model" src="https://meganenomegane1224.github.io/webGL_charactor/" loading = "lazy" frameborder="0" scrolling="no"></iframe>
         <div class="wipePos">
           <img class="wipe" src="assets/images/herowipe.png" alt="">
         </div>
@@ -112,7 +112,7 @@
     </div>
     <div id="bossIntro">
       <div class="blur">
-        <iframe class="model" src="https://meganenomegane1224.github.io/webGL_BOSScharactor/" frameborder="0" scrolling="no"></iframe>
+        <iframe class="model" src="https://meganenomegane1224.github.io/webGL_BOSScharactor/" loading = "lazy"  frameborder="0" scrolling="no"></iframe>
         <div class="wipePos">
           <img class="wipe" src="assets/images/bosswipe.png" alt="">
         </div>
