--- a/character.html
+++ b/character.html
@@ -12,6 +12,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-visible/1.2.0/jquery.visible.min.js"></script>
     <script src="assets/js/character.js" defer></script>
+    <script src="assets/js/appear.js"></script>
     <title>キャラクター紹介</title>
 </head>
 
@@ -20,6 +21,7 @@
     <div id="hero">
         
     </div>
+    
     <div id="heroIntro">
       <div class="blur">
         <iframe class="model" src="https://meganenomegane1224.github.io/webGL_charactor/" loading = "lazy" frameborder="0" scrolling="no"></iframe>
