--- a/home.html
+++ b/home.html
@@ -17,8 +17,14 @@
     <script src="assets/js/shutter2.js"></script>
     <script src="assets/js/swiper.js"></script>
     <script src="assets/js/header.js"></script>
+    <script src="assets/js/tab-controll.js"></script>
     <script src="assets/js/appear.js"></script>
     <script src="assets/js/context.js" defer></script>
+    <style>
+      canvas {
+          border: 1px solid black;
+      }
+    </style>
 
     <title>ホームページ</title>
 </head>
