スタッフ紹介ページ、ヘッダー、フッターの完成

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/question.css">
+  <link rel="stylesheet" href="assets/css/footer.css">
   <script type="text/javascript">var submitted = false;</script>
   <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) 
 {window.location='thanks.html'}"></iframe>
@@ -71,8 +72,43 @@
   </main>
 
   <footer>
-    <div class="footerInner"><small>&copy; NIR=A</small></div>
-  </footer>
+    <div class="footerInner">
+        <ul id=map>
+            <li>
+            <li>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3266.0483605250683!2d138.9528366!3d35.05553!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601993fa182016a3%3A0x2539289b512ef0d4!2z6Z2Z5bKh55yM56uL6Z-u5bGx6auY562J5a2m5qCh!5e0!3m2!1sja!2sjp!4v1639092519734!5m2!1sja!2sjp"
+                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </li>
+            </li>
+        </ul>
+    </div>
+    <ul class="links-main-pages">
+        <li>
+            <a href="https://twitter.com/NiraPhy_150" target="_blank"><img src="assets/images/twitterIcon.png"
+                    alt="twitter" class="icon"></a>
+        </li>
+        <li>
+            <a href="https://www.instagram.com/niraphy_150/" target="_blank"><img src="assets/images/instaIcon.png"
+                    alt="instagram" class="icon"></a>
+        </li>
+    </ul>
+    <ul class="links-sub-pages">
+      <li>
+        <a href="character.html">キャラクター</a>
+      </li>
+      <li>
+        <a href="staff.html">スタッフ</a>
+      </li>
+      <li>
+        <a href="news.html">ニュース</a>
+      </li>
+      <li>
+        <a href="contact.html">お問い合わせ</a>
+      </li>
+    </ul>
+    </div>
+</footer>
 </body>
 
 </html>
