--- a/staff.html
+++ b/staff.html
@@ -4,39 +4,103 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="assets/css/staff.css">
     <title>スタッフ紹介</title>
 </head>
 <body>
-    <h2 class="role"></h2>
-        <ul><h3>ホブゴブリン</h3></ul>
+    <a href="home.html" id="backHome">＜ ホームに戻る</a>
+    <main>
+    <h1>スタッフ紹介</h1>
+    <h2 class="role">プロジェクトマネージャー</h2>
+        <h3 class="manager">ホブゴブリン(M)</h3>
     <h2 class="role">プログラミング</h2>
+        <h3 class="manager">megane(U)</h3>
         <ul>
-            <h3 class="manager"></h3>
-            <li>ホブゴブリン</li>
+            <li>ホブゴブリン(M)</li>
         </ul>
     <h2 class="role">モデリング</h2>
+        <h3 class="manager">きーこv.v.(N)</h3>
         <ul>
-            
+            <li>michelle(T)</li>
+            <li>株式会社サーフェス(H)</li>
+            <li>T.M(M)</li>
+            <li>megane(U)</li>
+            <li>makaron1205(N)</li>
+            <li>たじー(T)</li>
         </ul>
     <h2 class="role">音楽</h2>
+        <h3 class="manager">瑛二(Y)</h3>
         <ul>
-
+            <li>岩田侑己</li>
+            <li>大地健太</li>
+            <li>ひろき(S)</li>
         </ul>
     <h2 class="role">イラスト</h2>
         <ul>
-
+            <li>ホブゴブリン(M)</li>
+            <li>michelle(T)</li>
+            <li>韮山高校美術部</li>
+            <li>益井</li>
+            <li>ひろ(S)</li>
+            <li>あか(s)</li>
         </ul>
     <h2 class="role">エフェクト</h2>
-        <ul>
-
-        </ul>
+        <h3 class="manager">こた(S)</h3>
     <h2 class="role">モーション</h2>
         <ul>
-
+            <li>ホブゴブリン(M)</li>
+            <li>megane(U)</li>
         </ul>
     <h2 class="role">ステージ・グラフィックス</h2>
+    <h3 class="manager">瑛二(Y)</h3>
         <ul>
-            
+            <li>megane(U)</li>
         </ul>
+    <h2 class="role">webページ制作</h2>
+        <h3 class="manager">ホブゴブリン(M)</h3>
+        <ul>
+            <li id="lastList" ></li>
+        </ul>
+    </main>
+
+        <footer>
+            <div class="footerInner">
+                <ul id=map>
+                    <li>
+                    <li>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3266.0483605250683!2d138.9528366!3d35.05553!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601993fa182016a3%3A0x2539289b512ef0d4!2z6Z2Z5bKh55yM56uL6Z-u5bGx6auY562J5a2m5qCh!5e0!3m2!1sja!2sjp!4v1639092519734!5m2!1sja!2sjp"
+                            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </li>
+                    </li>
+                </ul>
+            </div>
+            <ul class="links-main-pages">
+                <li>
+                    <a href="https://twitter.com/NiraPhy_150" target="_blank"><img src="assets/images/twitterIcon.png"
+                            alt="twitter" class="icon"></a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/niraphy_150/" target="_blank"><img src="assets/images/instaIcon.png"
+                            alt="instagram" class="icon"></a>
+                </li>
+            </ul>
+            <ul class="links-sub-pages">
+              <li>
+                <a href="character.html">キャラクター</a>
+              </li>
+              <li>
+                <a href="staff.html">スタッフ</a>
+              </li>
+              <li>
+                <a href="news.html">ニュース</a>
+              </li>
+              <li>
+                <a href="contact.html">お問い合わせ</a>
+              </li>
+            </ul>
+            </div>
+        </footer>
 </body>
 </html>
