--- a/home.html
+++ b/home.html
@@ -36,9 +36,9 @@
       <nav class = "pc-menu">
         <ul class = "pc-only">
           <img id = "logo" src="assets/images/rogo.png" alt="ゲームロゴ">
-          <li><a href="news.html">ニュース</a></li>
-          <li><a href="character.html">キャラクター</a></li>
-          <li><a href="staff.html">スタッフ</a></li>
+          <li><a class="list" href="news.html">ニュース</a></li>
+          <li><a class="list" href="character.html">キャラクター</a></li>
+          <li><a class="list" href="staff.html">スタッフ</a></li>
         </ul>
       </nav>
       <a href="contact.html" class="button pc-only">お問い合わせ</a>
@@ -71,7 +71,7 @@
             </div>
             <div class="carousel-wrapper fade-in fade-in-up">
                 <ul class="carousel-area">
-                    <li><img src="assets/images/testImage.jpg"></li>
+                    <li><a href="assets/news/news-1.html"><img src="assets/samnail/news-1.png" alt=""></a></li>
                     <li><img src="assets/images/screenshot.jpg"></li>
                     <li><img src="assets/images/screenshot.jpg"></li>
                     <li><img src="assets/images/screenshot.jpg"></li>
@@ -120,65 +120,45 @@
     <img id="sparkafter2" src="assets/images/lightafter.png" alt="">
     <img id="sparkbefore3" src="assets/images/lightbefore.png" alt="">
     <img id="sparkafter3" src="assets/images/lightafter.png" alt="">
+
     <footer>
-        <div class="footerInner">
+      <div class="footerInner">
           <ul id=map>
-            <li>
-            <li>
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3266.0483605250683!2d138.9528366!3d35.05553!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601993fa182016a3%3A0x2539289b512ef0d4!2z6Z2Z5bKh55yM56uL6Z-u5bGx6auY562J5a2m5qCh!5e0!3m2!1sja!2sjp!4v1639092519734!5m2!1sja!2sjp"
-                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </li>
-            </li>
+              <li>
+              <li>
+                  <iframe
+                      src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3266.0483605250683!2d138.9528366!3d35.05553!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601993fa182016a3%3A0x2539289b512ef0d4!2z6Z2Z5bKh55yM56uL6Z-u5bGx6auY562J5a2m5qCh!5e0!3m2!1sja!2sjp!4v1639092519734!5m2!1sja!2sjp"
+                      width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              </li>
+              </li>
           </ul>
-        </div>
-        <ul class="links-main-pages">
+      </div>
+      <ul class="links-main-pages">
           <li>
-            <a href="https://ja-jp.facebook.com/nirako/" target="_blank"><img src="images/facebook.png"
-                alt="韮山高校公式facebook" id="aicon"></a>
+              <a href="https://twitter.com/NiraPhy_150" target="_blank"><img src="assets/images/twitterIcon.png"
+                      alt="twitter" class="icon"></a>
           </li>
           <li>
-            <a href="http://nirako-dosokai.org/kinen150/" target="_blank"><img src="images/150th.jfif" alt="150周年企画"></a>
+              <a href="https://www.instagram.com/niraphy_150/" target="_blank"><img src="assets/images/instaIcon.png"
+                      alt="instagram" class="icon"></a>
           </li>
-          <li>
-            <a href="http://nirako-dosokai.org/"><img src="images/union.jpg" alt="同窓会"></a>
-          </li>
-          <li>
-            <a href="http://www.edu.pref.shizuoka.jp/nirayama-h/home.nsf/0A6D3D45392B674B492587E500218B46/$FILE/R4.2-3%E3%82%B9%E3%82%AF%E3%83%BC%E3%83%AB%E3%83%90%E3%82%B9.pdf"><img src="images/school-bus.jpg" alt="スクールバス"></a>
-          </li>
-          <li>
-            <a href="http://www.edu.pref.shizuoka.jp/nirayama-h/home.nsf/indexFormView/82F8E7A723A99D71492586F000252322?OpenDocument"><img src="images/virus.jpg" alt="インフルエンザの対応"></a>
-          </li>
-          <li>
-            <a href="http://www.edu.pref.shizuoka.jp/nirayama-h/home.nsf/C7A76AFCAB0980244925827300218E5D/$FILE/%E9%9F%AE%E5%B1%B1%E8%87%AA%E7%84%B6%E7%81%BD%E5%AE%B3%E7%99%BA%E7%94%9F%E6%99%82%E5%AF%BE%E5%BF%9C.pdf"><img src="images/wether.jpg" alt="荒天時の対応"></a>
-          </li>
-        </ul>
-        <!-- <ul class="links-sub-pages">
-          <li>
-            <a href="menu-html/direction.html">学校案内</a>
-          </li>
-          <li>
-            <a href="menu-html/school-life.html">学校生活</a>
-          </li>
-          <li>
-            <a href="menu-html/school-event.html">学校行事</a>
-          </li>
-          <li>
-            <a href="menu-html/student-route.html">進路状況</a>
-          </li>
-          <li>
-            <a href="menu-html/school-club.html">部活動</a>
-          </li>
-          <li>
-            <a href="menu-html/candidates.html">本校を目指す方へ</a>
-          </li>
-          <li>
-            <a href="menu-html/office-message.html">事務室より</a>
-          </li>
-        </ul> -->
-        <small>&copy;仮想高校</small>
-        </div>
-      </footer>
+      </ul>
+      <ul class="links-sub-pages">
+        <li>
+          <a href="character.html">キャラクター</a>
+        </li>
+        <li>
+          <a href="staff.html">スタッフ</a>
+        </li>
+        <li>
+          <a href="news.html">ニュース</a>
+        </li>
+        <li>
+          <a href="contact.html">お問い合わせ</a>
+        </li>
+      </ul>
+      </div>
+  </footer>
 </body>
 
 </html>
